<resources>
    <string name="app_name">FinAI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="waterfront">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="marital_status">
        <item>Married</item>
        <item>Single</item>
    </string-array>

    <string-array name="dependants">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3+</item>
    </string-array>

    <string-array name="view">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="condition">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="grade">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string-array name="employment">
        <item>Employed</item>
        <item>Self Employed</item>
    </string-array>

    <string-array name="college_education">
        <item>Graduated</item>
        <item>Not Graduated</item>
    </string-array>

    <string-array name="location">
        <item>Urban</item>
        <item>Rural</item>
        <item>Semi Urban</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="title_activity_home">Home</string>
    <string name="view_current_application">View Current Application</string>
    <string name="apply_for_a_loan">Apply For A Loan</string>
    <string name="house_cost_estimation">House Cost Estimation</string>
    <string name="sign_out">Sign Out</string>
    <string name="rate_us">Rate Us</string>
    <string name="submit">Submit</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="upload_documents">Upload Documents</string>
</resources>